Fixing the tag input overflow issue (https://github.com/lambda2/Muffin/issues/2)

--- a/Templates/Muffin/css/Muffin.css
+++ b/Templates/Muffin/css/Muffin.css
@@ -849,9 +849,11 @@ table {
     transform: rotate(360deg);
   }
 }
-#modal-new-comp-tags {
-  height: 30px !important;
+/*
+#modal-new-comp-tags{
+    height: 30px !important;
 }
+*/
 .ms-ctn {
   position: relative;
   height: 28px;
